step_1/jitfailure-dolfin_expression_1fa0bd2d96fdb50ca82dd7f56ae6be6f/error.log
/tmp/tmpddkohrxq/dolfin_expression_1fa0bd2d96fdb50ca82dd7f56ae6be6f.cpp: In member function ‘virtual void dolfin::dolfin_expression_1fa0bd2d96fdb50ca82dd7f56ae6be6f::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpddkohrxq/dolfin_expression_1fa0bd2d96fdb50ca82dd7f56ae6be6f.cpp:61:27: error: expected ‘;’ before ‘if’
   61 |           values[0] = 0.0 if x[1] < 1/3 else 1.0;
      |                           ^~
